reflectapi-demo/tests/errors/invalid_reflect_type_lifetime_generic.rs
#[derive(reflectapi::Input, reflectapi::Output)]
struct MyStruct<'a> {
    field: &'a u8,
}

fn main() {}
