reflectapi-demo/tests/errors/invalid_reflect_type_lifetime_generic.stderr
error: reflectapi::Input/reflectapi::Output does not support generic lifetime parameters
 --> tests/errors/invalid_reflect_type_lifetime_generic.rs:2:17
  |
2 | struct MyStruct<'a> {
  |                 ^^
